basic-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hanabinet
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hanabi-net-ui
          servicePort: 80
